trying to fix comma spacing and added a drop shadow to pub images

--- a/style.scss
+++ b/style.scss
@@ -271,6 +271,9 @@ strong, b {
 img {
   max-width: 100%;
 }
+.shadow-img {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
 
 .container {
   max-width: 900px; // Adjust this value to set the desired width
